--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>music-front-page</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but music-front-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>work_bgm_club</title><link href=/static/css/app.f56420db7e6d05cdb4d40a8c47f8335b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.3d002fff7a43115e6866.js></script><script type=text/javascript src=/static/js/app.92aa0145382c3db9f1a3.js></script></body></html>
